ingress/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: development
spec:
  ingressClassName: nginx
  rules:
    - host: rabbitmq.k3s-alb-249f37a-1760371909.ap-southeast-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-service
                port:
                  number: 15672
